Accessibility: High contrast mode fixes (#2376)
* added checked disabled checkbox to example

* refactored checkbox check to use borders instead of bg image

* added disabled style to checkbox check

* adjusted password checkbox alignment to label

* remove checkbox icon from radios

* use label class instead of element [test-visual]

* force current color change on element svg icons for HCM

* adjustment to: force current color change on element svg icons for HCM

* adjust checkbox toggle position to label

* refactored checked radios to support color changes in hcm [test-visual]

* HCM adjustments for checkbox focus state

* Fix for: HCM adjustments for checkbox focus state

* Fix for: HCM adjustments for checkbox focus state

* fix focus styles for inputs in HCM

* improve panel style for hcm

* button focus style fixes for hcm

* fix tabs and tables focus styles for hcm

* adjust skip link focus style for hcm

* fixed nav and section nav styles for hcm

* header style fixes for hcm

* added borders to banners for hcm

* search and autosuggest style fixs for hcm

* autosuggest style adjustments for hcm

* list style fixes for hcm

* add border to mobile header for hcm

* fix borderless radios focus state for hcm

* fix select icon for hcm

* panel styles fix for hcm

* hero style fixes for hcm

* pagination style fixes for hcm

* footer style fixes for hcm

* document list styles fix for hcm

* fixed typo in document list docs

* collapsible styles fix for hcm

* disabled checkboxes style fixes for hcm

* colour swatch style fixes for hcm

* highlighting style fixes for hcm

* panel style fixes for hcm

* update checkbox and radios style fix for hcm

* updated highlighting styles fix for hcm

* error style fixes for hcm

* feedback style fixes for hcm

* relationships style fixes for hcm

* modal style fixes for hcm

* message styles fix for hcm

* experimental tag style fix for hcm [test-visual]

* updated panel macro test replacing census with branded [test-vis

--- a/src/components/document-list/document-list.scss
+++ b/src/components/document-list/document-list.scss
@@ -120,6 +120,8 @@
       background-color: $color-banner-bg;
       border-bottom: none;
       display: block;
+      outline: 2px solid transparent; // Add transparent outline because Windows High Contrast Mode doesn't show background
+      outline-offset: -2px;
       padding: 2rem;
 
       @include mq(m) {
